--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <p><a class="uppercased" href="#">Enter</a></p>
+        <p><a class="uppercased" href="theband.html">Enter</a></p>
       </div>
     </div>
 
