band.html first part finished

--- a/listen.html
+++ b/listen.html
@@ -28,7 +28,7 @@
 
 <body>
 
-    <header class="conainer-fluid">
+    <header class="conainer-fluid header-content">
         <div class="wrapper-header">
 
             <div class="row">
@@ -79,13 +79,13 @@
 
     </header>
 
-    <section class="container-fluid">
+    <section class="container-fluid bg-section">
         <div class="row bg-contact">
             <div class="col-12-xs"></div>
         </div>
     </section>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid footer">
 
         <div class="row bg-all-footer">
 
