listen.html work in progress

--- a/listen.html
+++ b/listen.html
@@ -17,6 +17,20 @@
     <!--link to font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
+
+
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+
+    <link rel="stylesheet" href="css/style1.css">
+
+
+
+
+
+
     <!-- My style sheet to update the original template-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
@@ -27,6 +41,7 @@
 
 
 <body>
+
 
     <header class="conainer-fluid header-content">
         <div class="wrapper-header">
@@ -80,10 +95,255 @@
     </header>
 
     <section class="container-fluid bg-section">
-        <div class="row bg-contact">
-            <div class="col-12-xs"></div>
+        <div class="wrapper-section">
+
+
+
+            <!------------------ Newest record------------------------>
+
+            <div class="row newmusic-classics">
+                <div class="col-xs-12 col-sm-6 newmusic music-column">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="page-subtitle text-center">What's new!</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+
+
+                        <div class="col-xs-12 col-md-6 wrapper-song">
+                            <div class="row wrapper-player">
+                                <div class="row">
+                                    <div class="col-xs-12 album">
+                                        <div class="cover">
+                                            <div><img src="images/believer.jpg" alt="believer" /></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="title-song">
+                                            <h3>title song</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class=" col-xs-12 audio-mp3">
+                                        <audio controls>
+                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
+                                      Your browser does not support the audio element.
+                                    </audio>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-download"></i>
+                                    </div>
+                                    <div class="col-xs-4 share-link">
+                                        <a href="#"><i class="fa fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+ <div class="col-xs-12 col-md-6 wrapper-song">
+                            <div class="row wrapper-player">
+                                <div class="row">
+                                    <div class="col-xs-12 album">
+                                        <div class="cover">
+                                            <div><img src="images/believer.jpg" alt="believer" /></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="title-song">
+                                            <h3>title song</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class=" col-xs-12 audio-mp3">
+                                        <audio controls>
+                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
+                                      Your browser does not support the audio element.
+                                    </audio>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-download"></i>
+                                    </div>
+                                    <div class="col-xs-4 share-link">
+                                        <a href="#"><i class="fa fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                         <div class="col-xs-12 col-md-6 wrapper-song">
+                            <div class="row wrapper-player">
+                                <div class="row">
+                                    <div class="col-xs-12 album">
+                                        <div class="cover">
+                                            <div><img src="images/believer.jpg" alt="believer" /></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="title-song">
+                                            <h3>title song</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class=" col-xs-12 audio-mp3">
+                                        <audio controls>
+                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
+                                      Your browser does not support the audio element.
+                                    </audio>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-download"></i>
+                                    </div>
+                                    <div class="col-xs-4 share-link">
+                                        <a href="#"><i class="fa fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="col-xs-4 buy-download">
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                         <div class="col-xs-12 col-md-6 wrapper-song">
+                            <div class="row wrapper-player">
+                                <div class="row">
+                                    <div class="col-xs-12 album">
+                                        <div class="cover">
+                                            <div><img src="images/believer.jpg" alt="believer" /></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="title-song">
+                                            <h3>title song</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class=" col-xs-12 audio-mp3">
+                                        <audio controls>
+                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
+                                      Your browser does not support the audio element.
+                                    </audio>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-xs-4 buy-download">
+                                        <a href=""><i class="fa fa-download"></i></a>
+                                    </div>
+                                    <div class="col-xs-4 share-link">
+                                        <a href="#"><i class="fa fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="col-xs-4 buy-download">
+                                        <a href="#"><i class="fa fa-shopping-cart"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+
+
+                </div>
+
+
+
+
+
+
+
+                <div class="col-xs-12 col-sm-6 classics music-column">
+                    <h2 class="page-subtitle text-center">The classics</h2>
+
+                    <div class="col-xs-12 col-md-6">
+
+
+                        <div class="wrapper-player">
+                            <div class="player paused">
+                                <div class="album">
+                                    <div class="cover">
+                                        <div><img src="images/believer.jpg" alt="believer" /></div>
+                                    </div>
+                                </div>
+
+                                <div class="info">
+                                    <div class="time">
+                                        <span class="current-time">0:00</span>
+                                        <span class="progress"><span></span></span>
+                                        <span class="duration">0:00</span>
+                                    </div>
+
+                                    <h1>I'm a believer</h1>
+                                    <h2>3RDBURGLAR</h2>
+                                </div>
+
+                                <div class="actions">
+                                    <button class="shuffle">
+                                          <div class="arrow"></div>
+                                        <div class="arrow"></div>
+                                        </button>
+                                    <button class="button rw">
+                                          <div class="arrow"></div>
+                                          <div class="arrow"></div>
+                                        </button>
+                                    <button class="button play-pause">
+                                             <div class="arrow"></div>
+                                            </button>
+                                    <button class="button ff">
+                                          <div class="arrow"></div>
+                                          <div class="arrow"></div>
+                                        </button>
+                                    <button class="repeat"></button>
+                                </div>
+
+                                <audio prelaod src="mp3/Clarksville.mp3"></audio>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+
+
+
         </div>
     </section>
+
+
 
     <footer class="container-fluid footer">
 
@@ -189,7 +449,7 @@
     <!--Bootstrap (JS file)-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
+    <script src="js/index2.js"></script>
 
     <!-- Placed at the end of the document so the pages load faster
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
