updates listen.html part2

--- a/theband.html
+++ b/theband.html
@@ -86,7 +86,7 @@
 
             <div class="row ">
                 <div class="col-12-xs">
-                    <h1 class="text-center page-title">The Monkees</h1>
+                    <h1 class="text-center page-title">The Monkees are back!!</h1>
                 </div>
             </div>
 
@@ -108,14 +108,38 @@
                     </div>
 
                     <div class="text-justify textband">
-                        <p>We are an American rock and pop band originally active between 1966 and 1971, with reunion albums and tours in the decades that followed.</p>
-                        <p>We are formed in Los Angeles in 1965 by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees, which aired from 1966 to 1968. Our musical acting quartet was composed of Americans Micky Dolenz,
-                            Michael Nesmith, and Peter Tork; and the English actor and singer Davy Jones. Our band's music was initially supervised by producer Don Kirshner, backed by the songwriting duo of Tommy Boyce and Bobby Hart.
+                        <p>We are an American rock and pop band originally from California.</p>
+
+
+
+                        <p>Everyhing started in 1965 when Bob Rafelson and Bert Schneider produced the TV series called "The Monkees" (which aired from 1966 to 1968). This TV series was about a Rock Band and we all meet while acting in this series. Some
+                            of us were more musically experienced and the others learnt during the series.
                         </p>
-                        <p>We were initially allowed only limited roles in the recording studio for the first few months of our five-year career as "the Monkees". This was due in part to the amount of time required to film the television series.</p>
-                        <p>We were initially allowed only limited roles in the recording studio for the first few months of our five-year career as "the Monkees". This was due in part to the amount of time required to film the television series.</p>
-                        <p>We were initially allowed only limited roles in the recording studio for the first few months of our five-year career as "the Monkees". This was due in part to the amount of time required to film the television series.</p>
-                        <p>We were initially allowed only limited roles in the recording studio for the first few months of our five-year career as "the Monkees". This was due in part to the amount of time required to film the television series.</p>
+
+                        <p>
+                            The TV series had so much success that we decided to became real like Rock band. The beginnings were not easy, we received a lot of criticism because many people didn't believe in our musical talent.
+                        </p>
+
+                        <p>
+                            After our first record became number one and out album was top selling we could prove wrong to all those who didn'y belive in us.
+
+                        </p>
+                        <p>
+                            We were specially active between 1966 and 1971 and some of our biggest achievements was "", "", "", and "".
+
+                        </p>
+                        <p>
+                            Being in the spotlight sometimes can meke you the center of fake rummors that most of the times were not true, one of them was the rummor about the Beattles disliking us and not considering us a proper band but we actually becomed close friends with the
+                            Beatles after our visit to London in XXX.
+                        </p>
+
+
+
+                        <p>
+                            The Monkees have sold more than 75 million records worldwide[10][11] making them one of the biggest selling groups of all time with international hits, including "Last Train to Clarksville", "Pleasant Valley Sunday", "Daydream Believer", and "I'm a Believer".
+                            Newspapers and magazines reported that the Monkees outsold the Beatles and the Rolling Stones combined in 1967,[12][13] but Nesmith claims in his autobiography Infinite Tuesday that it was a lie that he told a reporter.[14]
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -130,9 +154,37 @@
                     </div>
 
                     <div class="text-justify textband">
-                        <p>We are an American rock and pop band originally active between 1966 and 1971, with reunion albums and tours in the decades that followed.</p>
-                        <p>We are formed in Los Angeles in 1965 by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees, which aired from 1966 to 1968. Our musical acting quartet was composed of Americans Micky Dolenz,
-                            Michael Nesmith, and Peter Tork; and the English actor and singer Davy Jones. Our band's music was initially supervised by producer Don Kirshner, backed by the songwriting duo of Tommy Boyce and Bobby Hart.
+
+
+
+
+
+                        <p>
+                            A revival of interest in the television show came in 1986, which led to a series of reunion tours and new records. The group has reunited and toured several times since then with different line-ups and varying degrees of success.[2][3][4][5] After Jones
+                            died in February 2012, the surviving members reunited for a tour in November–December 2012[6][7] and again in 2013 for a 24-date tour.[8] The Monkees continued to tour through their 2016 50th anniversary, with Dolenz and Tork
+                            forming the core of the band and Nesmith continuing to join them occasionally.
+                        </p>
+
+
+
+
+
+                        <p>
+                            From XXX until XXX we went throught some sad times in our personal live and we stop playing, we also lost a member of our band in XXX. Fortunately years after when everything was a bit calmer we decided to try once more and it was great to play again.
+                        </p>
+
+                        <p>
+                            We knew we wouldn't be as succesfull as we were in the 60's but our fans were asking us to come back and it was the least we could do for them after all the support they gave us over the years.
+                        </p>
+
+                        <p>
+                            Since then we haven't been as active as we used to be but we have recorded several albums and have gone on tours.
+                        </p>
+
+                        <p>
+                            Our last album was on 2018, just after our 50 year anniversary. In these days we are playing in special events, birthday celebrations and weddings. So if you like our music contact us and we will play for you!!
+                        </p>
+
                         </p>
 
 
@@ -353,7 +405,7 @@
                             <input type="password" class="form-control" id="InputPassword1" placeholder="type a password">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword1" placeholder="type your password again">
+                            <input type="password" class="form-control" id="InputPassword2" placeholder="type your password again">
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
