audio element size and position updated

--- a/listen.html
+++ b/listen.html
@@ -93,9 +93,12 @@
 
 
 
-        <!------------------ Newest record------------------------>
 
         <div class="row">
+            
+            
+<!------------------ Newest records ------------------------>
+
             <div class="col-xs-12 col-sm-6 newmusic music-column">
                 <div class="row">
                     <div class="col-xs-12">
@@ -160,6 +163,9 @@
 
                 </div>
             </div>
+
+
+<!-------------- the classics ------------------------------>
 
             <div class="col-xs-12 col-sm-6 classics music-column">
                 <div class="row">
